added game final levels img

--- a/ottergram/index.html
+++ b/ottergram/index.html
@@ -22,6 +22,18 @@
   </header>
   <main class="main-content">
     <ul class="thumbnail-list">
+      <li class = "thumbnail-item">
+        <a href="#">
+          <img class = "thumbnail-image" src="img/flexbox-froggy.PNG" alt="Flexbox-Froggy Final Level">
+          <span class = "thumbnail-title">Flexbox Froggy</span>
+        </a>
+      </li>
+      <li class ="thumbnail-item">
+        <a href="#">
+          <img class = "thumbnail-image" src="img/grid-garden.PNG" alt="Grid Garden Final Level">
+          <span class = "thumbnail-title">Grid Garden</span>
+        </a>
+      </li>
       <li class="thumbnail-item">
         <!-- <a> tag is an anchor tag, usually used to direct you to a different page
       but if we don't want it to do anything, we give it a dummy value
